fixing error count labels overflowing their box killed red/green bar... it was static removed right text alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -380,7 +380,6 @@ table#dashboard a {
 	width:195px;
 	height:22px;
 	float:left;
-	text-align:right;
 	padding:10px;
 }
 
